nova chat interface redeveloped

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -97,10 +97,37 @@
   "uploadProfilePictureScreen": {
     "title": "Upload profile picture",
     "instruction": "Add a clear photo of yourself to build trust with vehicle owners and fleet managers. A profile picture helps clients recognize you and makes your profile stand out.",
+    "instruction_mechanic": "Add a clear photo of yourself to build trust with vehicle owners and fleet managers. A profile picture helps clients recognize you and makes your profile stand out.",
+    "instruction_fleet_manager": "Upload a clear picture of yourself or business logo to give your fleet profile a recognizable identity.",
+    "instruction_vehicle_owner": "Upload a clear picture of yourself. This helps mechanics confirm they’re meeting the right person during a service request.",
     "uploadPrompt": "Tap to upload profile picture",
     "maxFileSize": "Max. File Size: 10MB",
     "selectImageError": "Please select an image",
     "uploadSuccess": "Profile image uploaded successfully"
+  },
+  "mechanicProfileSetup": {
+    "title": "Mechanic profile setup",
+    "instruction": "Tell us more about your skills and experience so we can connect you with the right repair jobs. Setting up your profile makes it easier for you to get matched with service requests faster.",
+    "businessNameLabel": "Business Name",
+    "businessNamePlaceholder": "Enter business name",
+    "businessNameRequired": "Business name is required",
+    "businessAddressLabel": "Business Address",
+    "businessAddressPlaceholder": "Enter business address",
+    "businessAddressRequired": "Business address is required",
+    "stateLabel": "State",
+    "statePlaceholder": "Select state",
+    "lgaLabel": "Local Government Area",
+    "lgaPlaceholder": "Select LGA",
+    "lgaPlaceholderNoState": "Select state first",
+    "lgaLoading": "Loading LGAs...",
+    "experienceLabel": "Years of Experience",
+    "experiencePlaceholder": "Select years of experience",
+    "availabilityTitle": "Select Availability",
+    "availabilityFromPlaceholder": "From",
+    "availabilityToPlaceholder": "To",
+    "timePickerStartTitle": "Select Start Time",
+    "timePickerEndTitle": "Select End Time",
+    "profileCreatedSuccess": "Profile created successfully"
   },
   "verifyCodeScreen": {
     "verificationTitle": "Verification",
