--- a/src/locales/ha.json
+++ b/src/locales/ha.json
@@ -97,10 +97,37 @@
   "uploadProfilePictureScreen": {
     "title": "Ɗora hoton martaba",
     "instruction": "Ƙara hotonku bayyananne don gina amana tare da masu motoci da manajojin motoci. Hoton martaba yana taimakawa abokan ciniki su gane ku kuma yana sa martabarku ta yi fice.",
+    "instruction_mechanic": "Ƙara hotonku bayyananne don gina amana tare da masu motoci da manajojin motoci. Hoton martaba yana taimakawa abokan ciniki su gane ku kuma yana sa martabarku ta yi fice.",
+    "instruction_fleet_manager": "Ɗora hotonku bayyananne ko tambarin kasuwanci don ba wa martabar motocin ku ganewa.",
+    "instruction_vehicle_owner": "Ɗora hotonku bayyananne. Wannan yana taimaka wa makanikai su tabbatar suna saduwa da mutumin da ya dace a lokacin buƙatar sabis.",
     "uploadPrompt": "Danna don ɗora hoton martaba",
     "maxFileSize": "Max. Girman Fayil: 10MB",
     "selectImageError": "Don Allah zaɓi hoto",
     "uploadSuccess": "An ɗora hoton martaba cikin nasara"
+  },
+  "mechanicProfileSetup": {
+    "title": "Shirya bayanin makaniki",
+    "instruction": "Faɗa mana game da ƙwarewar ku don mu haɗa ku da ayyukan gyara da suka dace. Shirya bayanan ku yana sa ya zama da sauƙi a gare ku don samun buƙatun sabis da sauri.",
+    "businessNameLabel": "Sunan Kasuwanci",
+    "businessNamePlaceholder": "Shigar da sunan kasuwanci",
+    "businessNameRequired": "Sunan kasuwanci yana da mahimmanci",
+    "businessAddressLabel": "Adireshin Kasuwanci",
+    "businessAddressPlaceholder": "Shigar da adireshin kasuwanci",
+    "businessAddressRequired": "Adireshin kasuwanci yana da mahimmanci",
+    "stateLabel": "Jihar",
+    "statePlaceholder": "Zaɓi jiha",
+    "lgaLabel": "Karamar Hukuma",
+    "lgaPlaceholder": "Zaɓi Karamar Hukuma",
+    "lgaPlaceholderNoState": "Zaɓi jiha da farko",
+    "lgaLoading": "Ana ɗora Karamar Hukuma...",
+    "experienceLabel": "Shekarun Ƙwarewa",
+    "experiencePlaceholder": "Zaɓi shekarun ƙwarewa",
+    "availabilityTitle": "Zaɓi Lokacin Aiki",
+    "availabilityFromPlaceholder": "Daga",
+    "availabilityToPlaceholder": "Zuwa",
+    "timePickerStartTitle": "Zaɓi Lokacin Farko",
+    "timePickerEndTitle": "Zaɓi Lokacin Ƙarshe",
+    "profileCreatedSuccess": "An ƙirƙiri bayanin cikin nasara"
   },
   "verifyCodeScreen": {
     "verificationTitle": "Tabbatarwa",
