--- a/src/locales/ig.json
+++ b/src/locales/ig.json
@@ -97,10 +97,37 @@
   "uploadProfilePictureScreen": {
     "title": "Bulite foto profaịlụ",
     "instruction": "Tinye foto gị doro anya iji wulite ntụkwasị obi na ndị nwe ụgbọala na ndị njikwa ụgbọala. Foto profaịlụ na-enyere ndị ahịa aka ịmata gị ma mee ka profaịlụ gị pụta ìhè.",
+    "instruction_mechanic": "Tinye foto gị doro anya iji wulite ntụkwasị obi na ndị nwe ụgbọala na ndị njikwa ụgbọala. Foto profaịlụ na-enyere ndị ahịa aka ịmata gị ma mee ka profaịlụ gị pụta ìhè.",
+    "instruction_fleet_manager": "Bulite foto gị doro anya ma ọ bụ akara ngosi azụmahịa gị ka o wee mee ka a mata profaịlụ ụgbọala gị.",
+    "instruction_vehicle_owner": "Bulite foto gị doro anya. Nke a na-enyere ndị nrụzi aka ikwenye na ha na onye ziri ezi na-ezute n'oge arịrịọ ọrụ.",
     "uploadPrompt": "Pịa ka ibulite foto profaịlụ",
     "maxFileSize": "Nnukwu nha faịlụ: 10MB",
     "selectImageError": "Biko họrọ foto",
     "uploadSuccess": "E buliri foto profaịlụ nke ọma"
+  },
+  "mechanicProfileSetup": {
+    "title": "Ntọala profaịlụ onye nrụzi",
+    "instruction": "Gwa anyị banyere nka na ahụmahụ gị ka anyị wee jikọọ gị na ọrụ nrụzi kwesịrị ekwesị. Ịtọlite ​​profaịlụ gị na-eme ka ọ dịrị gị mfe inweta arịrịọ ọrụ ngwa ngwa.",
+    "businessNameLabel": "Aha Azụmahịa",
+    "businessNamePlaceholder": "Tinye aha azụmahịa",
+    "businessNameRequired": "Aha azụmahịa dị mkpa",
+    "businessAddressLabel": "Adreesị Azụmahịa",
+    "businessAddressPlaceholder": "Tinye adreesị azụmahịa",
+    "businessAddressRequired": "Adreesị azụmahịa dị mkpa",
+    "stateLabel": "Steeti",
+    "statePlaceholder": "Họrọ steeti",
+    "lgaLabel": "Nchekwa Ọchịchị Obodo",
+    "lgaPlaceholder": "Họrọ LGA",
+    "lgaPlaceholderNoState": "Họrọ steeti mbụ",
+    "lgaLoading": "Na-ebunye LGA...",
+    "experienceLabel": "Afọ Ahụmahụ",
+    "experiencePlaceholder": "Họrọ afọ ahụmahụ",
+    "availabilityTitle": "Họrọ Oge Ịdị N'aka",
+    "availabilityFromPlaceholder": "Site na",
+    "availabilityToPlaceholder": "Ruo",
+    "timePickerStartTitle": "Họrọ Oge Mmalite",
+    "timePickerEndTitle": "Họrọ Oge Ọgwụgwụ",
+    "profileCreatedSuccess": "E mepụtala profaịlụ nke ọma"
   },
   "verifyCodeScreen": {
     "verificationTitle": "Nkwenye",
