--- a/src/locales/pcm.json
+++ b/src/locales/pcm.json
@@ -97,10 +97,37 @@
   "uploadProfilePictureScreen": {
     "title": "Upload profile picture",
     "instruction": "Put correct photo of yourself so vehicle owners and fleet managers go trust you. Profile picture dey help clients know you and make your profile fine well well.",
+    "instruction_mechanic": "Put correct photo of yourself so vehicle owners and fleet managers go trust you. Profile picture dey help clients know you and make your profile fine well well.",
+    "instruction_fleet_manager": "Upload clear photo of yourself or your business logo so your fleet profile go get correct face wey people fit recognize.",
+    "instruction_vehicle_owner": "Upload clear photo of yourself. This one go help mechanics confirm say dem dey meet the correct person during service request.",
     "uploadPrompt": "Tap to upload profile picture",
     "maxFileSize": "Max. File Size: 10MB",
     "selectImageError": "Abeg choose one image",
     "uploadSuccess": "Profile image upload don work"
+  },
+  "mechanicProfileSetup": {
+    "title": "Mechanic profile setup",
+    "instruction": "Tell us more about your skills and experience so we fit connect you with the correct repair jobs. Setting up your profile dey make am easy for you to get service requests fast.",
+    "businessNameLabel": "Business Name",
+    "businessNamePlaceholder": "Enter business name",
+    "businessNameRequired": "Business name must dey",
+    "businessAddressLabel": "Business Address",
+    "businessAddressPlaceholder": "Enter business address",
+    "businessAddressRequired": "Business address must dey",
+    "stateLabel": "State",
+    "statePlaceholder": "Select state",
+    "lgaLabel": "Local Government Area",
+    "lgaPlaceholder": "Select LGA",
+    "lgaPlaceholderNoState": "Select state first",
+    "lgaLoading": "LGAs dey load...",
+    "experienceLabel": "Years of Experience",
+    "experiencePlaceholder": "Select years of experience",
+    "availabilityTitle": "Select When You Go Dey Available",
+    "availabilityFromPlaceholder": "From",
+    "availabilityToPlaceholder": "To",
+    "timePickerStartTitle": "Select Start Time",
+    "timePickerEndTitle": "Select End Time",
+    "profileCreatedSuccess": "Profile setup don work successfully"
   },
   "verifyCodeScreen": {
     "verificationTitle": "Verification",
