--- a/src/locales/yo.json
+++ b/src/locales/yo.json
@@ -97,10 +97,37 @@
   "uploadProfilePictureScreen": {
     "title": "Gbé àwòrán profaili sí òkè",
     "instruction": "Fi àwòrán tó mọ́ hàn láti kọ́ ìgbẹ́kẹ̀lé pẹ̀lú àwọn oníṣọ̀wọ́ ọkọ̀ àti àwọn alábòójútó ọkọ̀. Àwòrán profaili máa ń ran àwọn oníbàárà lọ́wọ́ láti mọ̀ ọ́ àti láti mú profaili rẹ wá sí àkíyèsí.",
+    "instruction_mechanic": "Fi àwòrán tó mọ́ hàn láti kọ́ ìgbẹ́kẹ̀lé pẹ̀lú àwọn oníṣọ̀wọ́ ọkọ̀ àti àwọn alábòójútó ọkọ̀. Àwòrán profaili máa ń ran àwọn oníbàárà lọ́wọ́ láti mọ̀ ọ́ àti láti mú profaili rẹ wá sí àkíyèsí.",
+    "instruction_fleet_manager": "Gbé àwòrán rẹ tó mọ́ tàbí àmì-ìdánimọ̀ ilé-iṣẹ́ rẹ sí òkè láti fún profaili ọkọ̀ rẹ ní ìdánimọ̀ tí a lè rí.",
+    "instruction_vehicle_owner": "Gbé àwòrán rẹ tó mọ́ sí òkè. Èyí máa ń ran àwọn mẹkaniki lọ́wọ́ láti fìdí rẹ̀ múlẹ̀ pé wọ́n ń pàdé ẹni tí ó tọ́ nígbà ìbéèrè iṣẹ́.",
     "uploadPrompt": "Fọwọ́ tẹ̀ láti gbé àwòrán profaili sí òkè",
     "maxFileSize": "Ìwọ̀n Fáìlì Tó Pọ̀ Jù: 10MB",
     "selectImageError": "Jọ̀wọ́ yan àwòrán kan",
     "uploadSuccess": "A ti gbé àwòrán profaili sí òkè ní àṣeyọrí"
+  },
+  "mechanicProfileSetup": {
+    "title": "Ìlànà ìṣètò profaili mẹkaniki",
+    "instruction": "Sọ fún wa nípa àwọn ọgbọ́n àti ìrírí rẹ kí a lè so ọ́ pọ̀ mọ́ àwọn iṣẹ́ àtúnṣe tó yẹ. Ṣíṣètò profaili rẹ máa ń mú kó rọrùn fún ọ láti gba àwọn ìbéèrè iṣẹ́ ìsìn ní kíákíá.",
+    "businessNameLabel": "Orúkọ Ilé-iṣẹ́",
+    "businessNamePlaceholder": "Tẹ orúkọ ilé-iṣẹ́",
+    "businessNameRequired": "Orúkọ ilé-iṣẹ́ ṣe pàtàkì",
+    "businessAddressLabel": "Àdírẹ́ẹ̀sì Ilé-iṣẹ́",
+    "businessAddressPlaceholder": "Tẹ àdírẹ́ẹ̀sì ilé-iṣẹ́",
+    "businessAddressRequired": "Àdírẹ́ẹ̀sì ilé-iṣẹ́ ṣe pàtàkì",
+    "stateLabel": "Ìpínlẹ̀",
+    "statePlaceholder": "Yan ìpínlẹ̀",
+    "lgaLabel": "Àgbègbè Ìjọba Ìbílẹ̀",
+    "lgaPlaceholder": "Yan LGA",
+    "lgaPlaceholderNoState": "Yan ìpínlẹ̀ lákọ̀ọ́kọ́",
+    "lgaLoading": "Ní fífi LGA sí òkè...",
+    "experienceLabel": "Àwọn Ọdún Ìrírí",
+    "experiencePlaceholder": "Yan àwọn ọdún ìrírí",
+    "availabilityTitle": "Yan Àkókò Tí Wọ́n Lè Rí Ọ",
+    "availabilityFromPlaceholder": "Láti",
+    "availabilityToPlaceholder": "Sí",
+    "timePickerStartTitle": "Yan Àkókò Ìbẹ̀rẹ̀",
+    "timePickerEndTitle": "Yan Àkókò  Ìparí",
+    "profileCreatedSuccess": "A ti ṣẹ̀dá profaili ní àṣeyọrí"
   },
   "verifyCodeScreen": {
     "verificationTitle": "Ìfìdíhẹ",
